--- a/Assessment_template.tex
+++ b/Assessment_template.tex
@@ -231,16 +231,16 @@ recent years since the declaration.
   \hline
 Year & California & Oregon & Washington & At-sea-hake & Survey & Total Catch \\ 
   \hline
-2007 & 0.15 & 83.65 & 45.11 & 4.05 & 0.58 & 133.54 \\ 
+2007 & 0.15 & 83.65 & 45.12 & 4.05 & 0.58 & 133.55 \\ 
   2008 & 0.39 & 58.64 & 16.61 & 15.93 & 0.80 & 92.37 \\ 
-  2009 & 0.92 & 58.75 & 33.22 & 1.56 & 2.70 & 97.14 \\ 
+  2009 & 0.92 & 58.75 & 33.22 & 1.56 & 2.70 & 97.15 \\ 
   2010 & 0.14 & 58.00 & 22.29 & 16.87 & 1.62 & 98.92 \\ 
-  2011 & 0.12 & 30.26 & 19.57 & 9.17 & 1.19 & 60.31 \\ 
+  2011 & 0.12 & 30.26 & 19.66 & 9.17 & 1.19 & 60.39 \\ 
   2012 & 0.18 & 30.41 & 21.79 & 4.52 & 1.59 & 58.49 \\ 
-  2013 & 0.08 & 34.86 & 14.54 & 5.41 & 1.71 & 56.60 \\ 
+  2013 & 0.08 & 34.86 & 14.83 & 5.41 & 1.71 & 56.89 \\ 
   2014 & 0.18 & 30.64 & 9.55 & 3.92 & 0.56 & 44.85 \\ 
   2015 & 0.12 & 38.12 & 11.41 & 8.71 & 1.51 & 59.87 \\ 
-  2016 & 0.19 & 34.15 & 12.23 & 10.30 & 0.00 & 56.86 \\ 
+  2016 & 0.19 & 34.15 & 13.12 & 10.30 & 0.00 & 57.75 \\ 
    \hline
 \end{tabular}
 \end{table}
@@ -2088,42 +2088,44 @@ stratification. \label{fig:boundary_map}}
 
 \begin{figure}
 \centering
-\includegraphics{}
-\caption{length comps, discard, Fishery \label{fig:mod1_1_}}
+\includegraphics{./r4ss/plots_mod1/comp_lenfit_flt1mkt1.png}
+\caption{length comps, discard, Fishery
+\label{fig:mod1_1_comp_lenfit_flt1mkt1}}
 \end{figure}
 
 \begin{figure}
 \centering
-\includegraphics{}
+\includegraphics{./r4ss/plots_mod1/comp_lenfit_residsflt1mkt1.png}
 \caption{Pearson residuals, discard, Fishery (max=11.41)\\
 Closed bubbles are positive residuals (observed \textgreater{} expected)
 and open bubbles are negative residuals (observed \textless{} expected).
-\label{fig:mod1_2_}}
+\label{fig:mod1_2_comp_lenfit_residsflt1mkt1}}
 \end{figure}
 
 \begin{figure}
 \centering
-\includegraphics{}
+\includegraphics{./r4ss/plots_mod1/comp_lenfit_sampsize_flt1mkt1.png}
 \caption{N\_EffN comparison, length comps, discard, Fishery
-\label{fig:mod1_3_}}
+\label{fig:mod1_3_comp_lenfit_sampsize_flt1mkt1}}
 \end{figure}
 
 \begin{figure}
 \centering
-\includegraphics{}
+\includegraphics{./r4ss/plots_mod1/comp_lenfit_data_weighting_TA1.8_Fishery.png}
 \caption{Francis data weighting method TA1.8 Fishery Suggested sample
 size adjustment (with 95\% interval) for len data from Fishery: 0.146
-(0.0981\_0.2612) \label{fig:mod1_4_}}
+(0.0976\_0.2693)
+\label{fig:mod1_4_comp_lenfit_data_weighting_TA1.8_Fishery}}
 \end{figure}
 
 \begin{figure}
 \centering
-\includegraphics{}
+\includegraphics{./r4ss/plots_mod1/comp_lenfit_flt1mkt0_page1.png}
 \caption{length comps, whole catch, Fishery (plot 1 of 2)
-\label{fig:mod1_5_}}
+\label{fig:mod1_5_comp_lenfit_flt1mkt0_page1}}
 \end{figure}
 
-\includegraphics{}
+\includegraphics{./r4ss/plots_mod1/comp_lenfit_flt1mkt0_page2.png}
 
 \begin{center} 
 
@@ -2131,7 +2133,7 @@ size adjustment (with 95\% interval) for len data from Fishery: 0.146
 
              \end{center}
 
-\includegraphics{}
+\includegraphics{./r4ss/plots_mod1/comp_lenfit_residsflt1mkt0_page2.png}
 
 \begin{center} 
 
@@ -2141,23 +2143,25 @@ size adjustment (with 95\% interval) for len data from Fishery: 0.146
 
 \begin{figure}
 \centering
-\includegraphics{}
+\includegraphics{./r4ss/plots_mod1/comp_lenfit_sampsize_flt1mkt0.png}
 \caption{N\_EffN comparison, length comps, whole catch, Fishery
-\label{fig:mod1_8_}}
+\label{fig:mod1_8_comp_lenfit_sampsize_flt1mkt0}}
 \end{figure}
 
 \begin{figure}
 \centering
-\includegraphics{}
+\includegraphics{./r4ss/plots_mod1/comp_lenfit_data_weighting_TA1.8_Fishery.png}
 \caption{Francis data weighting method TA1.8 Fishery Suggested sample
 size adjustment (with 95\% interval) for len data from Fishery: 0.146
-(0.0967\_0.2627) \label{fig:mod1_9_}}
+(0.0933\_0.2688)
+\label{fig:mod1_9_comp_lenfit_data_weighting_TA1.8_Fishery}}
 \end{figure}
 
 \begin{figure}
 \centering
-\includegraphics{}
-\caption{length comps, whole catch, ASHOP \label{fig:mod1_10_}}
+\includegraphics{./r4ss/plots_mod1/comp_lenfit_flt2mkt0.png}
+\caption{length comps, whole catch, ASHOP
+\label{fig:mod1_10_comp_lenfit_flt2mkt0}}
 \end{figure}
 
 \FloatBarrier
