--- a/Assessment_template.tex
+++ b/Assessment_template.tex
@@ -1403,6 +1403,191 @@ undergoing review.
 
 \begin{table}[ht]
 \centering
+\caption{Landings for each state (all gears combined), the At-Sea Hake fishery, the Foreign fleet, and                                             research.} 
+\label{tab:Comm_Catch}
+\begin{tabular}{>{\centering}p{.5in}>{\centering}p{.75in}>{\centering}p{.75in}>{\centering}p{.75in}>{\centering}p{1in}>{\centering}p{.75in}>{\centering}p{.75in}}
+  \hline
+Year & California & Oregon & Washington & At-Sea Hake & Foreign & Research \\ 
+  \hline
+1892 & 0.0 & 0.1 & 0.0 & 0.0 &  0 & 0.0 \\ 
+  1893 & 0.0 & 0.1 & 0.0 & 0.0 &  0 & 0.0 \\ 
+  1894 & 0.0 & 0.1 & 0.0 & 0.0 &  0 & 0.0 \\ 
+  1895 & 0.0 & 0.0 & 0.0 & 0.0 &  0 & 0.0 \\ 
+  1896 & 0.0 & 0.0 & 0.0 & 0.0 &  0 & 0.0 \\ 
+  1897 & 0.0 & 0.0 & 0.0 & 0.0 &  0 & 0.0 \\ 
+  1898 & 0.0 & 0.0 & 0.0 & 0.0 &  0 & 0.0 \\ 
+  1899 & 0.0 & 0.0 & 0.0 & 0.0 &  0 & 0.0 \\ 
+  1900 & 0.0 & 0.0 & 0.0 & 0.0 &  0 & 0.0 \\ 
+  1901 & 0.0 & 0.0 & 0.0 & 0.0 &  0 & 0.0 \\ 
+  1902 & 0.0 & 0.0 & 0.0 & 0.0 &  0 & 0.0 \\ 
+  1903 & 0.0 & 0.0 & 0.0 & 0.0 &  0 & 0.0 \\ 
+  1904 & 0.0 & 0.0 & 0.0 & 0.0 &  0 & 0.0 \\ 
+  1905 & 0.0 & 0.0 & 0.0 & 0.0 &  0 & 0.0 \\ 
+  1906 & 0.0 & 0.0 & 0.0 & 0.0 &  0 & 0.0 \\ 
+  1907 & 0.0 & 0.0 & 0.0 & 0.0 &  0 & 0.0 \\ 
+  1908 & 0.0 & 0.0 & 0.1 & 0.0 &  0 & 0.0 \\ 
+  1909 & 0.0 & 0.0 & 0.1 & 0.0 &  0 & 0.0 \\ 
+  1910 & 0.0 & 0.0 & 0.1 & 0.0 &  0 & 0.0 \\ 
+  1911 & 0.0 & 0.0 & 0.1 & 0.0 &  0 & 0.0 \\ 
+  1912 & 0.0 & 0.0 & 0.0 & 0.0 &  0 & 0.0 \\ 
+  1913 & 0.0 & 0.0 & 0.0 & 0.0 &  0 & 0.0 \\ 
+  1914 & 0.0 & 0.0 & 0.0 & 0.0 &  0 & 0.0 \\ 
+  1915 & 0.0 & 0.0 & 0.0 & 0.0 &  0 & 0.0 \\ 
+  1916 & 0.1 & 0.0 & 0.4 & 0.0 &  0 & 0.0 \\ 
+  1917 & 0.1 & 0.0 & 0.8 & 0.0 &  0 & 0.0 \\ 
+  1918 & 0.1 & 0.0 & 1.1 & 0.0 &  0 & 0.0 \\ 
+  1919 & 0.1 & 0.0 & 0.4 & 0.0 &  0 & 0.0 \\ 
+  1920 & 0.1 & 0.0 & 0.3 & 0.0 &  0 & 0.0 \\ 
+  1921 & 0.1 & 0.0 & 0.3 & 0.0 &  0 & 0.0 \\ 
+  1922 & 0.1 & 0.0 & 0.1 & 0.0 &  0 & 0.0 \\ 
+  1923 & 0.1 & 0.0 & 0.2 & 0.0 &  0 & 0.0 \\ 
+  1924 & 0.1 & 0.0 & 0.5 & 0.0 &  0 & 0.0 \\ 
+  1925 & 0.1 & 0.0 & 0.6 & 0.0 &  0 & 0.0 \\ 
+  1926 & 0.2 & 0.0 & 1.0 & 0.0 &  0 & 0.0 \\ 
+  1927 & 0.1 & 0.0 & 1.4 & 0.0 &  0 & 0.0 \\ 
+  1928 & 0.1 & 0.1 & 1.2 & 0.0 &  0 & 0.0 \\ 
+  1929 & 0.5 & 0.1 & 0.7 & 0.0 &  0 & 0.0 \\ 
+  1930 & 0.4 & 0.1 & 0.9 & 0.0 &  0 & 0.0 \\ 
+  1931 & 0.9 & 0.1 & 0.4 & 0.0 &  0 & 0.0 \\ 
+   \hline
+\end{tabular}
+\end{table}
+
+\begin{table}[ht]
+\centering
+\begin{tabular}{>{\centering}p{.5in}>{\centering}p{.75in}>{\centering}p{.75in}>{\centering}p{.75in}>{\centering}p{1in}>{\centering}p{.75in}>{\centering}p{.75in}}
+  \hline
+Year & California & Oregon & Washington & At-Sea Hake & Foreign & Research \\ 
+  \hline
+1932 & 0.6 & 0.1 & 0.4 & 0.0 &  0 & 0.0 \\ 
+  1933 & 1.1 & 0.1 & 0.5 & 0.0 &  0 & 0.0 \\ 
+  1934 & 0.8 & 0.0 & 2.3 & 0.0 &  0 & 0.0 \\ 
+  1935 & 0.7 & 0.1 & 7.7 & 0.0 &  0 & 0.0 \\ 
+  1936 & 0.4 & 0.2 & 1.6 & 0.0 &  0 & 0.0 \\ 
+  1937 & 0.9 & 0.4 & 2.0 & 0.0 &  0 & 0.0 \\ 
+  1938 & 1.2 & 0.1 & 5.1 & 0.0 &  0 & 0.0 \\ 
+  1939 & 1.9 & 0.4 & 8.7 & 0.0 &  0 & 0.0 \\ 
+  1940 & 1.7 & 9.1 & 12.2 & 0.0 &  0 & 0.0 \\ 
+  1941 & 2.6 & 14.0 & 13.6 & 0.0 &  0 & 0.0 \\ 
+  1942 & 0.9 & 26.6 & 18.6 & 0.0 &  0 & 0.0 \\ 
+  1943 & 2.0 & 94.3 & 453.6 & 0.0 &  0 & 0.0 \\ 
+  1944 & 5.6 & 164.5 & 739.3 & 0.0 &  0 & 0.0 \\ 
+  1945 & 13.4 & 247.1 & 1887.1 & 0.0 &  0 & 0.0 \\ 
+  1946 & 14.6 & 193.2 & 845.9 & 0.0 &  0 & 0.0 \\ 
+  1947 & 5.1 & 167.2 & 385.3 & 0.0 &  0 & 0.0 \\ 
+  1948 & 7.9 & 177.8 & 491.1 & 0.0 &  0 & 0.0 \\ 
+  1949 & 4.0 & 472.9 & 409.5 & 0.0 &  0 & 0.0 \\ 
+  1950 & 3.0 & 690.1 & 675.7 & 0.0 &  0 & 0.0 \\ 
+  1951 & 4.3 & 840.1 & 735.1 & 0.0 &  0 & 0.0 \\ 
+  1952 & 2.9 & 2030.5 & 305.6 & 0.0 &  0 & 0.0 \\ 
+  1953 & 145.6 & 1223.5 & 361.6 & 0.0 &  0 & 0.0 \\ 
+  1954 & 123.2 & 1837.5 & 538.8 & 0.0 &  0 & 0.0 \\ 
+  1955 & 48.8 & 1346.4 & 555.6 & 0.0 &  0 & 0.0 \\ 
+  1956 & 3.8 & 2563.8 & 548.2 & 0.0 &  0 & 0.0 \\ 
+  1957 & 1.6 & 2128.1 & 538.5 & 0.0 &  0 & 0.0 \\ 
+  1958 & 2.9 & 1564.9 & 530.4 & 0.0 &  0 & 0.0 \\ 
+  1959 & 1.5 & 892.6 & 337.0 & 0.0 &  0 & 0.0 \\ 
+  1960 & 19.6 & 1358.8 & 928.1 & 0.0 &  0 & 0.0 \\ 
+  1961 & 1.1 & 2061.9 & 1179.8 & 0.0 &  0 & 0.0 \\ 
+  1962 & 0.6 & 2584.9 & 1725.2 & 0.0 &  0 & 0.0 \\ 
+  1963 & 32.5 & 3693.9 & 2006.0 & 0.0 &  0 & 0.0 \\ 
+  1964 & 46.1 & 4261.6 & 1770.7 & 0.0 &  0 & 0.0 \\ 
+  1965 & 34.9 & 5627.8 & 1972.1 & 0.0 &  0 & 0.0 \\ 
+  1966 & 5.2 & 1591.2 & 1725.5 & 0.0 & 15561 & 0.0 \\ 
+  1967 & 17.8 & 354.7 & 1861.0 & 0.0 & 12357 & 0.0 \\ 
+  1968 & 21.9 & 466.4 & 2501.2 & 0.0 & 6639 & 0.0 \\ 
+  1969 & 8.4 & 422.3 & 1236.0 & 0.0 & 469 & 0.0 \\ 
+  1970 & 8.7 & 507.4 & 1293.3 & 0.0 & 441 & 0.0 \\ 
+  1971 & 12.2 & 290.4 & 673.6 & 0.0 & 902 & 0.0 \\ 
+  1972 & 11.4 & 105.3 & 796.5 & 0.0 & 950 & 0.0 \\ 
+  1973 & 11.9 & 121.2 & 713.1 & 0.0 & 1773 & 0.0 \\ 
+  1974 & 15.7 & 136.7 & 641.8 & 0.0 & 1457 & 0.0 \\ 
+  1975 & 11.4 & 181.3 & 413.9 & 62.3 & 496 & 0.0 \\ 
+  1976 & 17.1 & 663.7 & 521.1 & 31.9 & 239 & 0.0 \\ 
+   \hline
+\end{tabular}
+\end{table}
+
+\begin{table}[ht]
+\centering
+\begin{tabular}{>{\centering}p{.5in}>{\centering}p{.75in}>{\centering}p{.75in}>{\centering}p{.75in}>{\centering}p{1in}>{\centering}p{.75in}>{\centering}p{.75in}}
+  \hline
+Year & California & Oregon & Washington & At-Sea Hake & Foreign & Research \\ 
+  \hline
+1977 & 16.7 & 457.1 & 752.0 & 3.8 &  0 & 11.9 \\ 
+  1978 & 42.5 & 498.7 & 1391.5 & 15.4 &  0 & 0.0 \\ 
+  1979 & 136.7 & 735.9 & 581.4 & 15.1 &  0 & 34.5 \\ 
+  1980 & 19.2 & 948.6 & 666.2 & 47.0 &  0 & 4.6 \\ 
+  1981 & 10.8 & 929.7 & 390.3 & 15.4 &  0 & 0.0 \\ 
+  1982 & 145.9 & 584.0 & 273.0 & 28.3 &  0 & 0.0 \\ 
+  1983 & 102.0 & 1032.7 & 437.7 & 10.9 &  0 & 4.4 \\ 
+  1984 & 47.6 & 750.4 & 815.7 & 2.3 &  0 & 0.9 \\ 
+  1985 & 70.9 & 789.5 & 503.2 & 11.4 &  0 & 13.6 \\ 
+  1986 & 52.8 & 676.5 & 588.9 & 19.8 &  0 & 1.4 \\ 
+  1987 & 120.9 & 550.0 & 399.4 & 5.4 &  0 & 0.0 \\ 
+  1988 & 75.4 & 749.8 & 509.8 & 4.5 &  0 & 0.5 \\ 
+  1989 & 29.5 & 927.8 & 466.2 & 4.3 &  0 & 4.2 \\ 
+  1990 & 18.3 & 567.8 & 427.2 & 80.9 &  0 & 0.0 \\ 
+  1991 & 8.4 & 853.2 & 530.1 & 46.1 &  0 & 0.0 \\ 
+  1992 & 15.3 & 623.8 & 435.2 & 373.3 &  0 & 4.9 \\ 
+  1993 & 11.0 & 797.8 & 464.7 & 0.9 &  0 & 0.2 \\ 
+  1994 & 6.7 & 626.4 & 352.0 & 83.8 &  0 & 0.0 \\ 
+  1995 & 9.2 & 515.0 & 289.8 & 46.6 &  0 & 2.8 \\ 
+  1996 & 18.4 & 531.1 & 236.7 & 6.3 &  0 & 1.2 \\ 
+  1997 & 15.8 & 439.1 & 184.9 & 6.4 &  0 & 0.1 \\ 
+  1998 & 21.6 & 436.6 & 172.4 & 22.3 &  0 & 3.8 \\ 
+  1999 & 19.8 & 326.8 & 145.8 & 16.5 &  0 & 1.4 \\ 
+  2000 & 6.8 & 95.1 & 33.0 & 10.1 &  0 & 0.6 \\ 
+  2001 & 0.5 & 193.4 & 51.8 & 21.0 &  0 & 2.8 \\ 
+  2002 & 0.8 & 107.1 & 39.5 & 3.9 &  0 & 0.3 \\ 
+  2003 & 0.2 & 94.6 & 30.2 & 6.3 &  0 & 3.6 \\ 
+  2004 & 2.1 & 97.7 & 22.3 & 1.1 &  0 & 2.5 \\ 
+  2005 & 0.1 & 51.2 & 10.4 & 1.7 &  0 & 1.3 \\ 
+  2006 & 0.2 & 52.2 & 15.8 & 3.1 &  0 & 1.2 \\ 
+  2007 & 0.2 & 83.6 & 45.1 & 4.0 &  0 & 0.6 \\ 
+  2008 & 0.4 & 58.6 & 16.6 & 15.9 &  0 & 0.8 \\ 
+  2009 & 0.9 & 58.7 & 33.2 & 1.6 &  0 & 2.7 \\ 
+  2010 & 0.1 & 58.0 & 22.3 & 16.9 &  0 & 1.6 \\ 
+  2011 & 0.1 & 30.3 & 19.7 & 9.2 &  0 & 1.2 \\ 
+  2012 & 0.2 & 30.4 & 21.8 & 4.5 &  0 & 1.6 \\ 
+  2013 & 0.1 & 34.9 & 14.8 & 5.4 &  0 & 1.7 \\ 
+  2014 & 0.2 & 30.6 & 9.6 & 3.9 &  0 & 0.6 \\ 
+  2015 & 0.1 & 38.1 & 11.4 & 8.7 &  0 & 1.5 \\ 
+  2016 & 0.2 & 34.1 & 13.1 & 10.3 &  0 & 0.0 \\ 
+   \hline
+\end{tabular}
+\end{table}
+
+\begin{table}[ht]
+\centering
+\caption{Summary of discard rates used in the model by each data source.} 
+\label{tab:Discard}
+\begin{tabular}{>{\centering}p{.75in}>{\centering}p{.75in}>{\centering}p{.75in}>{\centering}p{1.1in}}
+  \hline
+Year & Source & Discard & Standard Error \\ 
+  \hline
+1986 & Pikitch & 0.050 & 0.300 \\ 
+  1992 & Pikitch & 0.100 & 0.300 \\ 
+  2002 & WCGOP & 0.150 & 0.164 \\ 
+  2003 & WCGOP & 0.183 & 0.268 \\ 
+  2004 & WCGOP & 0.203 & 0.206 \\ 
+  2005 & WCGOP & 0.175 & 0.346 \\ 
+  2006 & WCGOP & 0.148 & 0.243 \\ 
+  2007 & WCGOP & 0.171 & 0.261 \\ 
+  2008 & WCGOP & 0.362 & 0.172 \\ 
+  2009 & WCGOP & 0.504 & 0.153 \\ 
+  2010 & WCGOP & 0.487 & 0.195 \\ 
+  2011 & WCGOP & 0.015 & 0.053 \\ 
+  2012 & WCGOP & 0.028 & 0.054 \\ 
+  2013 & WCGOP & 0.027 & 0.054 \\ 
+  2014 & WCGOP & 0.035 & 0.050 \\ 
+  2015 & WCGOP & 0.010 & 0.053 \\ 
+   \hline
+\end{tabular}
+\end{table}
+
+\begin{table}[ht]
+\centering
 \caption{Summary of commercial fishery length samples used in the stock assessment.} 
 \label{tab:Comm_Lengths}
 \begin{tabular}{>{\centering}p{.75in}>{\centering}p{.75in}>{\centering}p{.75in}>{\centering}p{1in}}
