--- a/Assessment_template.tex
+++ b/Assessment_template.tex
@@ -1849,6 +1849,80 @@ Year & Tows & Fish & Sample Size \\
 \end{tabular}
 \end{table}
 
+\begin{table}[ht]
+\centering
+\caption{Summary of the commercial catch-per-unit effort
+                                              time-series used in the stock
+                                              assessment.} 
+\label{tab:CPUE_Summary}
+\begin{tabular}{>{\centering}p{.5in}>{\centering}p{.7in}>{\centering}p{.7in}}
+  \hline
+Year & Obs & SE \\ 
+  \hline
+1956 & 0.40 & 0.40 \\ 
+  1957 & 0.30 & 0.40 \\ 
+  1958 & 0.32 & 0.40 \\ 
+  1959 & 0.29 & 0.40 \\ 
+  1960 & 0.28 & 0.40 \\ 
+  1961 & 0.31 & 0.40 \\ 
+  1962 & 0.29 & 0.40 \\ 
+  1963 & 0.34 & 0.40 \\ 
+  1964 & 0.35 & 0.40 \\ 
+  1965 & 0.55 & 0.40 \\ 
+  1966 & 0.47 & 0.40 \\ 
+  1967 & 0.30 & 0.40 \\ 
+  1968 & 0.17 & 0.40 \\ 
+  1969 & 0.18 & 0.40 \\ 
+  1970 & 0.17 & 0.40 \\ 
+  1971 & 0.20 & 0.40 \\ 
+  1972 & 0.20 & 0.40 \\ 
+  1973 & 0.11 & 0.40 \\ 
+   \hline
+\end{tabular}
+\end{table}
+
+\begin{table}[ht]
+\centering
+\caption{Summary of the biomass/abundance
+                                              time series used in the stock
+                                              assessment.} 
+\label{tab:Index_Summary}
+\begin{tabular}{>{\centering}p{.4in}>{\centering}p{.5in}>{\centering}p{.3in}>{\centering}p{.5in}>{\centering}p{.3in}>{\centering}p{.5in}>{\centering}p{.3in}>{\centering}p{.5in}>{\centering}p{.3in}>{\centering}p{.5in}>{\centering}p{.3in}}
+  \hline
+Year & Obs & SE & Obs & SE & Obs & SE & Obs & SE & Obs & SE \\ 
+  \hline
+1979 & 36977 & 0.47 & - & - & - & - & - & - & - & - \\ 
+  1980 & - & - & 7624 & 0.52 & - & - & - & - & - & - \\ 
+  1983 & - & - & 6561 & 0.48 & - & - & - & - & - & - \\ 
+  1985 & 24522 & 0.65 & - & - & - & - & - & - & - & - \\ 
+  1986 & - & - & 2922 & 0.54 & - & - & - & - & - & - \\ 
+  1989 & - & - & 3690 & 0.55 & - & - & - & - & - & - \\ 
+  1992 & - & - & 2836 & 0.53 & - & - & - & - & - & - \\ 
+  1995 & - & - & 1994 & 0.54 & - & - & - & - & - & - \\ 
+  1996 & - & - & - & - & 6346 & 0.51 & - & - & - & - \\ 
+  1997 & - & - & - & - & 3156 & 0.51 & - & - & - & - \\ 
+  1998 & - & - & 2690 & 0.52 & - & - & - & - & - & - \\ 
+  1999 & - & - & - & - & 3935 & 0.50 & 1425 & 0.97 & - & - \\ 
+  2000 & - & - & - & - & 3557 & 0.53 & 1151 & 0.90 & - & - \\ 
+  2001 & - & - & 1047 & 0.54 & 3492 & 0.48 & 1959 & 0.91 & - & - \\ 
+  2002 & - & - & - & - & - & - & 1615 & 1.08 & - & - \\ 
+  2003 & - & - & - & - & - & - & - & - & 8575 & 0.65 \\ 
+  2004 & - & - & 1989 & 0.55 & - & - & - & - & 4226 & 0.68 \\ 
+  2005 & - & - & - & - & - & - & - & - & 6835 & 0.67 \\ 
+  2006 & - & - & - & - & - & - & - & - & 4987 & 0.70 \\ 
+  2007 & - & - & - & - & - & - & - & - & 5143 & 0.64 \\ 
+  2008 & - & - & - & - & - & - & - & - & 3334 & 0.67 \\ 
+  2009 & - & - & - & - & - & - & - & - & 2501 & 0.64 \\ 
+  2010 & - & - & - & - & - & - & - & - & 4563 & 0.63 \\ 
+  2011 & - & - & - & - & - & - & - & - & 6642 & 0.63 \\ 
+  2012 & - & - & - & - & - & - & - & - & 6985 & 0.64 \\ 
+  2013 & - & - & - & - & - & - & - & - & 6537 & 0.63 \\ 
+  2014 & - & - & - & - & - & - & - & - & 3997 & 0.63 \\ 
+  2015 & - & - & - & - & - & - & - & - & 4523 & 0.60 \\ 
+   \hline
+\end{tabular}
+\end{table}
+
 \FloatBarrier
 
 \FloatBarrier
@@ -1970,26 +2044,6 @@ No. & Parameter & Value & Phase & Bounds & Status & SD & Prior (Exp.Val, SD)  \\
 \label{tab:model_params}
 \end{longtable}
 \end{landscape}
-
-\newpage
-
-\begin{table}[ht]
-\centering
-\caption{Summary of the biomass/abundance
-                                              time series used in the stock
-                                              assessment.} 
-\label{tab:Index_summary}
-\begin{tabular}{>{\centering}p{.4in}>{\centering}p{.3in}>{\centering}p{.3in}>{\centering}p{.3in}>{\centering}p{.6in}>{\centering}p{.5in}>{\centering}p{.8in}>{\centering}p{.8in}>{\centering}p{.5in}}
-  \hline
-Region & ID & Fleet & Years & Name & Fishery ind. & Filtering & Method & Endorsed \\ 
-  \hline
-WA & 1 & 4 & 1981-2014 & Dockside CPUE & No & trip, area, month, Stephens-MacCall & delta-GLM (bin-gamma) & SSC \\ 
-  - & - & - & - & - & - & - & - & - \\ 
-  - & - & - & - & - & - & - & - & - \\ 
-  - & - & - & - & - & - & - & - & - \\ 
-   \hline
-\end{tabular}
-\end{table}
 
 \newpage
 
