--- a/Assessment_template.tex
+++ b/Assessment_template.tex
@@ -1889,8 +1889,9 @@ Year & Obs & SE \\
 \label{tab:Index_Summary}
 \begin{tabular}{>{\centering}p{.4in}>{\centering}p{.5in}>{\centering}p{.3in}>{\centering}p{.5in}>{\centering}p{.3in}>{\centering}p{.5in}>{\centering}p{.3in}>{\centering}p{.5in}>{\centering}p{.3in}>{\centering}p{.5in}>{\centering}p{.3in}}
   \hline
-Year & Obs & SE & Obs & SE & Obs & SE & Obs & SE & Obs & SE \\ 
-  \hline
+  & \multicolumn{2}{c}{POP} & \multicolumn{2}{c}{Triennial} & \multicolumn{2}{c}{AFSC Slope} & \multicolumn{2}{c}{NWFSC Slope} & \multicolumn{2}{c}{NWFSC Shelf/Slope} \\
+ Year & Obs & SE & Obs & SE & Obs & SE & Obs & SE & Obs & SE\\
+ \hline
 1979 & 36977 & 0.47 & - & - & - & - & - & - & - & - \\ 
   1980 & - & - & 7624 & 0.52 & - & - & - & - & - & - \\ 
   1983 & - & - & 6561 & 0.48 & - & - & - & - & - & - \\ 
